2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/misc/httpserver/ratecontrol.py:
	  bytes is a built-in.
	* flumotion/component/misc/httpserver/admin_gtk.py:
	  format is a built-in.
	* flumotion/component/misc/porter/porter.py:
	  Remove unused exception.
	* flumotion/component/producers/playlist/admin_gtk.py:
	  iter is a built-in.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/formatting.py (added):
	  Add new module name.  Move code there.
	* flumotion/common/format.py:
	  Make this an empty stub, to be removed for Flumotion 0.10
	* flumotion/common/Makefile.am:
	  Add new file.
	* flumotion/component/base/componentnode.py:
	* flumotion/component/base/eatersnode.py:
	* flumotion/component/base/feedersnode.py:
	* flumotion/component/base/multiple.py:
	* flumotion/component/consumers/disker/admin_gtk.py:
	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/misc/httpserver/admin_gtk.py:
	* flumotion/component/misc/httpserver/cachemanager.py:
	* flumotion/monitor/nagios/log.py:
	* flumotion/monitor/nagios/process.py:
	* flumotion/test/test_common_format.py:
	  Change all imports to
	  from flumotion.common import format as formatting
	  to prepare for the deprecation.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/misc/httpserver/cachemanager.py:
	  hash and file are builtin, replace them.
	  Remove unused exceptions.
	* flumotion/component/misc/httpserver/cachedprovider.py:
	  Remove unused import.
	  file is a builtin, replace it.
	* flumotion/worker/checks/device.py:
	  Remove unused imports.
	  id is a builtin, replace it.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/effects/videoscale/admin_gtk.py:
	  Remove unused import.
	* flumotion/worker/checks/video.py:
	* flumotion/component/converters/video/video.py: